3.0 "" (released x.x.xxxx)

  * Regenerate the magic.mime cache when the text file has a newer
    modification date.
    Type: feature
    Changed: wc/magic/__init__.py

2.39 "Firefly" (released 9.5.2006)

  * Always use the default locale for translation of messages.
    Type: bugfix
    Changed: wc/i18n.py
    
  * Restrict the allowed ports for HTTP CONNECT requests to avoid misuse.
    Type: bugfix
    Changed: wc/proxy/Allowed.py, wc/proxy/HttpClient.py

  * Do not leave out empty HTML attribute values.
    Type: bugfix
    Changed: wc/filter/html/__init__.py

  * Wrap JavaScript in a <![CDATA[]]> section rather than a HTML comment.
    Type: feature
    Changed: wc/js/__init__.py

  * Prevent IE nested object exploit.
    Type: feature
    Changed: wc/filter/html/HtmlSecurity.py

  * Downgrade the JS engine to the one found in FireFox 1.5 (end eventually
    in 2.0). Reason are too much changes in the TRUNK development,
    especially the drop for support of JS pre-1.5 versions.
    Type: feature
    Changed: libjs/*

  * Updated spidermonkey JavaScript library from upstream CVS as of
    20060507.
    Type: feature
    Changed: libjs/*

  * Updated Squid blacklists to 20060505.
    Type: feature
    Changed: config/blacklist*

  * Reimplemented the rating system, still in beta release state though.
    Type: feature
    Added: wc/rating/*

  * Fix socket leaks in case of connect timeouts.
    Type: bugfix
    Changed: wc/proxy/Connection.py

2.38 "The worlds fastest Indian" (released 5.4.2006)

  * Remove literal "</script>" in embedded JavaScript files.
    Type: bugfix
    Changed: wc/js/__init__.py

  * Correctly use open file descriptor when writing new folder rules.
    Type: bugfix
    Changed: wc/webgui/context/filterconfig_html.py,
      wc/filter/rules/FolderRule.py

  * Don't use unsupported iterkeys() on form object.
    Type: bugfix
    Changed: wc/webgui/context/config_html.py

  * Make sure all methods in the HTML security filter honor that